[gd_scene load_steps=10 format=3 uid="uid://2v06ypbkgmb0"]

[ext_resource type="Texture2D" uid="uid://dr5k7pmgf04bq" path="res://media/game_win.png" id="1_0glm6"]
[ext_resource type="Script" path="res://scenes/menus/game_end_screen.gd" id="1_isfs2"]
[ext_resource type="Texture2D" uid="uid://debw2f2o6n6cb" path="res://media/LoseScreen.png" id="3_wsvs7"]
[ext_resource type="Texture2D" uid="uid://p5kvlxd3nuix" path="res://media/angery.png" id="4_4rxfw"]
[ext_resource type="FontFile" uid="uid://dum8djm4c46f1" path="res://media/Child Hood.otf" id="5_amuit"]

[sub_resource type="GDScript" id="GDScript_l6y7j"]
script/source = "extends Sprite2D


func _process(_delta: float) -> void:
	rotation_degrees = randf_range(-5, 5)
"

[sub_resource type="AtlasTexture" id="AtlasTexture_jkm11"]
atlas = ExtResource("1_0glm6")
region = Rect2(608.44, 852.87, 726, 110.11)

[sub_resource type="GDScript" id="GDScript_h1jbs"]
resource_name = "game_end_button"
script/source = "extends TextureButton


func _ready() -> void:
	mouse_entered.connect(set_modulate.bind(Color(1.2,1.2,1.2)))
	mouse_exited.connect(set_modulate.bind(Color(1,1,1)))
	button_down.connect(set_modulate.bind(Color(0.8,.8,.8)))
	button_up.connect(set_modulate.bind(Color(1,1,1)))
"

[sub_resource type="LabelSettings" id="LabelSettings_mk2wb"]
font = ExtResource("5_amuit")
font_size = 114

[node name="GameEndScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_isfs2")

[node name="BackgroundGood" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_0glm6")
stretch_mode = 3

[node name="BackgroundBad" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_wsvs7")
stretch_mode = 3

[node name="Angery" type="Sprite2D" parent="BackgroundBad"]
position = Vector2(1595, 624)
scale = Vector2(0.440104, 0.440104)
texture = ExtResource("4_4rxfw")
script = SubResource("GDScript_l6y7j")

[node name="NextButton" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 611.0
offset_top = 851.0
offset_right = 1337.0
offset_bottom = 961.0
texture_normal = SubResource("AtlasTexture_jkm11")
script = SubResource("GDScript_h1jbs")

[node name="StingSFX" type="AudioStreamPlayer" parent="."]

[node name="FinalScore" type="Label" parent="."]
layout_mode = 0
offset_left = 1324.0
offset_top = 25.0
offset_right = 1899.0
offset_bottom = 168.0
text = "SCORE"
label_settings = SubResource("LabelSettings_mk2wb")
horizontal_alignment = 2

[connection signal="pressed" from="NextButton" to="." method="_on_next_level_pressed"]
